# Prism

./: .gitignore  .meson-subproject-wrap-hash.txt  CMakeLists.txt  README.md  fmt-10.2.0.patch  meson.build  meson_options.txt  typos.toml
.github/workflows/: build.yml  typos.yml
CrossFiles/: kernel-target-aarch64.cross-file  kernel-target-clang-aarch64.cross-file  kernel-target-clang-x86_64.cross-file  kernel-target-gcc-aarch64.cross-file  kernel-target-gcc-x86_64.cross-file  kernel-target-x86_64.cross-file
Source/: cmath  meson.build
Source/Prism/: Bitmap.hpp  Compiler.hpp  Concepts.hpp  Delegate.hpp  Endian.hpp  Math.hpp  NonCopyable.hpp  NonMovable.hpp  Path.cpp  Path.hpp  PathView.cpp  PathView.hpp  Pointer.hpp  Printf.cpp  Printf.hpp  RedBlackTree.hpp  RedBlackTree.inl  Ref.hpp  Scope.hpp  Singleton.hpp  SourceLocation.hpp  Spinlock.hpp  Stacktrace.cpp  Stacktrace.hpp  String.hpp  StringUtils.hpp  StringView.hpp  TypeTraits.hpp  Types.hpp  UUID.hpp  WeakRef.hpp
Source/Prism/Algorithm/: FNV1aHash.hpp  Find.hpp  Hash.cpp  Hash.hpp  Random.hpp  SearchString.hpp  Sort.hpp
Source/Prism/Containers/: Array.hpp  BitSpan.hpp  Bitmap.cpp  Bitmap.hpp  CircularQueue.hpp  Deque.hpp  DoublyLinkedList.hpp  InitializerList.hpp  IntervalTree.hpp  IntrusiveList.hpp  IntrusiveList.inl  IntrusiveRedBlackTree.hpp  IntrusiveRefList.hpp  IntrusiveRefList.inl  KeyValuePair.hpp  Queue.hpp  Queue.inl  RadixTree.hpp  RedBlackTree.hpp  RedBlackTree.inl  RingBuffer.cpp  RingBuffer.hpp  Set.hpp  Span.hpp  SplitBuffer.hpp  Stack.hpp  Stack.inl  Tuple.hpp  UnorderedMap.hpp  UnorderedMap.inl  Vector.hpp
Source/Prism/Core/: AllocatorTraits.hpp  Bits.hpp  Compiler.hpp  Concepts.hpp  Concepts.ixx  Config.hpp  Core.hpp  Error.hpp  Eternal.hpp  HashTraits.hpp  Integer128.hpp  Iterator.hpp  Limits.hpp  NonCopyable.hpp  NonMovable.hpp  ParameterPack.hpp  Platform.hpp  Ranges.hpp  Singleton.hpp  TypeTraits.hpp  TypeTraitsForward.hpp  Types.hpp  UUID.hpp  Version.hpp.in
Source/Prism/Core/Details/: CVRefTraits.inl  CallableTraits.inl  Conditional.inl  Constructibility.inl  CoreTraits.inl  TransformationTraits.inl  TypeProperties.inl
Source/Prism/Debug/: Assertions.cpp  Assertions.hpp  Log.cpp  Log.hpp  LogSink.cpp  LogSink.hpp  Logger.cpp  Logger.hpp  SourceLocation.hpp  Stacktrace.cpp  Stacktrace.hpp  Test.hpp  Ubsan.cpp
Source/Prism/Details/: Concepts.inl
Source/Prism/Math/: Matrix.hpp  Matrix.inl  Vector.hpp  Vector.inl
Source/Prism/Memory/: Allocator.hpp  BitStream.hpp  Buffer.hpp  BumpAllocator.hpp  ByteStream.hpp  DataStream.hpp  Endian.hpp  Memory.cpp  Memory.hpp  Pointer.hpp  Ref.hpp  RefCounted.hpp  SSOStorage.hpp  Scope.hpp  SlabAllocator.hpp  SlabPool.hpp  SlobAllocator.hpp  Span.hpp  WeakRef.hpp
Source/Prism/Network/: IPv4Address.hpp  Ipv4Address.hpp
Source/Prism/String/: CharTraits.hpp  CodePoints.hpp  FormatHandler.hpp  FormatString.hpp  Formatter.hpp  FormatterContext.hpp  Printf.cpp  Printf.hpp  String.hpp  StringBuilder.hpp  StringUtils.hpp  StringView.hpp  StringView.inl
Source/Prism/Utility/: Atomic.hpp  AtomicBuiltins.hpp  Checksum.hpp  Compare.hpp  Delegate.hpp  Expected.hpp  Hash.hpp  LockingPolicy.hpp  Math.hpp  OptionParser.cpp  OptionParser.hpp  Optional.hpp  Path.cpp  Path.hpp  PathView.cpp  PathView.hpp  RangeAllocator.hpp  SimdIntrinsics.hpp  SimdVector.hpp  Time.hpp  Variant.hpp
Tests/: meson.build
Tests/Algorithm/: main.cpp  meson.build
Tests/Algorithm/Find/: main.cpp
Tests/Algorithm/Random/: main.cpp
Tests/Algorithm/SearchString/: main.cpp
Tests/Algorithm/Sort/: main.cpp
Tests/Containers/: meson.build
Tests/Containers/BitSpan/: main.cpp
Tests/Containers/Deque/: main.cpp
Tests/Containers/DoublyLinkedList/: main.cpp
Tests/Containers/IntrusiveRedBlackTree/: main.cpp
Tests/Containers/Queue/: main.cpp
Tests/Containers/RingBuffer/: main.cpp
Tests/Containers/Stack/: main.cpp
Tests/Containers/Tuple/: main.cpp
Tests/Containers/UnorderedMap/: main.cpp
Tests/Containers/Vector/: main.cpp
Tests/Core/: meson.build
Tests/Core/NumericLimits/: main.cpp
Tests/Core/TypeTraits/: main.cpp
Tests/Debug/: meson.build
Tests/Debug/Log/: main.cpp
Tests/Deque/: main.cpp
Tests/DoublyLinkedList/: main.cpp
Tests/IntrusiveList/: main.cpp
Tests/Math/: meson.build
Tests/Math/Matrix/: main.cpp
Tests/Math/Vector/: main.cpp
Tests/Memory/: main.cpp  meson.build
Tests/Memory/Ref/: main.cpp
Tests/Memory/SlabAllocator/: main.cpp
Tests/RedBlackTree/: main.cpp
Tests/String/: main.cpp  meson.build
Tests/String/BasicString/: main.cpp
Tests/String/BasicStringView/: main.cpp
Tests/String/StringBuilder/: main.cpp
Tests/String/StringUtils/: main.cpp
Tests/StringBuilder/: main.cpp
Tests/StringUtils/: main.cpp
Tests/StringView/: test.cpp
Tests/TypeTraits/: main.cpp
Tests/UnorderedMap/: main.cpp
Tests/Utility/: meson.build
Tests/Utility/Atomic/: main.cpp
Tests/Utility/AtomicBuiltins/: main.cpp
Tests/Utility/Delegate/: main.cpp
Tests/Utility/OptionParser/: main.cpp
Tests/Utility/SimdIntrinsics/: main.cpp
Tests/Utility/Variant/: main.cpp
Tests/Vector/: main.cpp
patches/: fmt-10.2.0.patch
subprojects/: demangler.wrap  fmt-10.2.0.wrap  magic_enum.wrap
subprojects/packagefiles/: demangler.tar  fmt-10.2.0.tar  magic_enum.tar
subprojects/packagefiles/magic_enum/: meson.build
