srcs = files(
  'Prism/Containers/RingBuffer.cpp',
  'Prism/Debug/Assertions.cpp',
  'Prism/Debug/Log.cpp',
  'Prism/Debug/Logger.cpp',
  'Prism/Debug/LogSink.cpp',
  'Prism/Debug/Ubsan.cpp',
  'Prism/Debug/Stacktrace.cpp',
  'Prism/Utility/Path.cpp',
  'Prism/Utility/PathView.cpp',
)

incs += include_directories('.')
